{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 63,
  "lineage": "a30a98e2-0e05-84c5-0ec2-ffc12187b00f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tastylog-dev-private-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:route-table/rtb-0642baec469e82b32",
            "id": "rtb-0642baec469e82b32",
            "owner_id": "688654582404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tastylog-dev-private-network"
            },
            "tags_all": {
              "Name": "tastylog-dev-private-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tastylog-dev-public-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:route-table/rtb-027a3f1529259e489",
            "id": "rtb-027a3f1529259e489",
            "owner_id": "688654582404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tastylog-dev-public-network"
            },
            "tags_all": {
              "Name": "tastylog-dev-public-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tastylog-dev-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00888986378043f82",
            "route_table_id": "rtb-0642baec469e82b32",
            "subnet_id": "subnet-0e52c8a7849e4f42d"
          },
          "dependencies": [
            "aws_route_table.tastylog-dev-private-network",
            "aws_subnet.tastylog-dev-private-a",
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tastylog-dev-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033a12b59f0e9ef32",
            "route_table_id": "rtb-0642baec469e82b32",
            "subnet_id": "subnet-082b172d97ef5315c"
          },
          "dependencies": [
            "aws_route_table.tastylog-dev-private-network",
            "aws_subnet.tastylog-dev-private-c",
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tastylog-dev-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0736e90cf4d6db713",
            "route_table_id": "rtb-027a3f1529259e489",
            "subnet_id": "subnet-0cc4ab428421d3fe7"
          },
          "dependencies": [
            "aws_route_table.tastylog-dev-public-network",
            "aws_subnet.tastylog-dev-public-a",
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tastylog-dev-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011e7ce7602689013",
            "route_table_id": "rtb-027a3f1529259e489",
            "subnet_id": "subnet-020aecb5e239eb64f"
          },
          "dependencies": [
            "aws_route_table.tastylog-dev-public-network",
            "aws_subnet.tastylog-dev-public-c",
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tastylog-dev-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:security-group/sg-0dc9c781e6da3d24f",
            "description": "testylog dev app security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-61a54008"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-61a54008"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0dc9c781e6da3d24f",
            "ingress": [],
            "name": "tastylog-dev-app-sg",
            "name_prefix": "",
            "owner_id": "688654582404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tastylog-dev-app-sg"
            },
            "tags_all": {
              "Name": "tastylog-dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tastylog-dev-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:security-group/sg-07830f44914e7b542",
            "description": "testylog dev db security group",
            "egress": [],
            "id": "sg-07830f44914e7b542",
            "ingress": [],
            "name": "tastylog-dev-db-sg",
            "name_prefix": "",
            "owner_id": "688654582404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tastylog-dev-db-sg"
            },
            "tags_all": {
              "Name": "tastylog-dev-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tastylog-dev-mng-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:security-group/sg-0a429cb0294e5ed9a",
            "description": "testylog dev mng security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a429cb0294e5ed9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "tastylog-dev-mng-sg",
            "name_prefix": "",
            "owner_id": "688654582404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tastylog-dev-mng-sg"
            },
            "tags_all": {
              "Name": "tastylog-dev-mng-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tastylog-dev-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:security-group/sg-08c00cbacf8ef2661",
            "description": "testylog dev web security group",
            "egress": [],
            "id": "sg-08c00cbacf8ef2661",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tastylog-dev-web-sg",
            "name_prefix": "",
            "owner_id": "688654582404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tastylog-dev-web-sg"
            },
            "tags_all": {
              "Name": "tastylog-dev-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3000,
            "id": "sgrule-789734099",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dc9c781e6da3d24f",
            "security_group_rule_id": "sgr-023c18db2f2a320cb",
            "self": false,
            "source_security_group_id": "sg-08c00cbacf8ef2661",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tastylog-dev-app-sg",
            "aws_security_group.tastylog-dev-web-sg",
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1476640229",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dc9c781e6da3d24f",
            "security_group_rule_id": "sgr-0a5f964ffb3128288",
            "self": false,
            "source_security_group_id": "sg-07830f44914e7b542",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tastylog-dev-app-sg",
            "aws_security_group.tastylog-dev-db-sg",
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3006804167",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07830f44914e7b542",
            "security_group_rule_id": "sgr-0cc01f695cc846aed",
            "self": false,
            "source_security_group_id": "sg-0dc9c781e6da3d24f",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tastylog-dev-app-sg",
            "aws_security_group.tastylog-dev-db-sg",
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3000,
            "id": "sgrule-2358976702",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08c00cbacf8ef2661",
            "security_group_rule_id": "sgr-01d2c3a90fd8e9983",
            "self": false,
            "source_security_group_id": "sg-0dc9c781e6da3d24f",
            "timeouts": null,
            "to_port": 3000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tastylog-dev-app-sg",
            "aws_security_group.tastylog-dev-web-sg",
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tastylog-dev-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:subnet/subnet-0e52c8a7849e4f42d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e52c8a7849e4f42d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688654582404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tastylog-dev-private-a"
            },
            "tags_all": {
              "Name": "tastylog-dev-private-a"
            },
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tastylog-dev-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:subnet/subnet-082b172d97ef5315c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082b172d97ef5315c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688654582404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tastylog-dev-private-c"
            },
            "tags_all": {
              "Name": "tastylog-dev-private-c"
            },
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tastylog-dev-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:subnet/subnet-0cc4ab428421d3fe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc4ab428421d3fe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688654582404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tastylog-dev-public-a"
            },
            "tags_all": {
              "Name": "tastylog-dev-public-a"
            },
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tastylog-dev-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:subnet/subnet-020aecb5e239eb64f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020aecb5e239eb64f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688654582404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tastylog-dev-public-c"
            },
            "tags_all": {
              "Name": "tastylog-dev-public-c"
            },
            "vpc_id": "vpc-08fed787f80bb6526"
          },
          "dependencies": [
            "aws_vpc.tastylog-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tastylog-dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:688654582404:vpc/vpc-08fed787f80bb6526",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-04a6952d986e662c7",
            "default_route_table_id": "rtb-0d101724e88625f9d",
            "default_security_group_id": "sg-00927e695b297f4ca",
            "dhcp_options_id": "dopt-a17459c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fed787f80bb6526",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d101724e88625f9d",
            "owner_id": "688654582404",
            "tags": {
              "Name": "tastylog-dev-vpc"
            },
            "tags_all": {
              "Name": "tastylog-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}